# Hospital-AI-Backend

./: .env.example  .gitignore  CHANGES.md  MIGRATION_PIP_TO_UV.md  QUICKSTART.md  QUICKSTART_COMPLETE.md  README.md  UV_GUIDE.md  config.py  main.py  pyproject.toml  requirements.txt
frontend/: README.md  app.py
training/clinical_training/: train_clinical_model.py
training/image_training/: train_image_model.py
