[project]
name = "hospital-ai-backend"
version = "0.2.0"
description = "AI-powered medical diagnosis API with image classification, clinical risk assessment, and AI doctor consultation"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["medical-ai", "healthcare", "diagnosis", "machine-learning", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.128.1",
    "numpy>=2.0.0",
    "pandas>=2.0.0,<3",  # <3 required for streamlit compatibility
    "pillow>=10.0.0,<12",  # <12 required for streamlit compatibility
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
    "uvicorn>=0.40.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "joblib>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"
"config.py" = "config.py"

[tool.hatch.build]
include = [
    "*.py",
    "training/**/*.py",
    "frontend/**/*.py",
]

[dependency-groups]
dev = []

